@@ -44,114 +44,6 @@ when "4"
   end
 end
 
-case prefs[:apps4]
-  when 'simple-test'
-    prefs[:dev_webserver] = 'webrick'
-    prefs[:prod_webserver] = 'same'
-    prefs[:templates] = 'erb'
-    prefs[:git] = false
-    prefs[:github] = false
-    prefs[:database] = 'sqlite'
-    prefs[:unit_test] = false
-    prefs[:integration] = false
-    prefs[:fixtures] = false
-    prefs[:frontend] = false
-    prefs[:email] = false
-    prefs[:authentication] = false
-    prefs[:devise_modules] = false
-    prefs[:authorization] = false
-    prefs[:starter_app] = false
-    prefs[:form_builder] = false
-    prefs[:quiet_assets] = false
-    prefs[:local_env_file] = 'none'
-    prefs[:better_errors] = false
-    prefs[:pry] = false
-    prefs[:deployment] = 'none'
-    prefs[:ban_spiders] = false
-    prefs[:continuous_testing] = false
-  when 'learn-rails'
-    prefs[:dev_webserver] = 'webrick'
-    prefs[:prod_webserver] = 'same'
-    prefs[:templates] = 'erb'
-    prefs[:git] = true
-    prefs[:database] = 'default'
-    prefs[:frontend] = 'foundation5'
-    prefs[:email] = 'gmail'
-    prefs[:authentication] = false
-    prefs[:devise_modules] = false
-    prefs[:authorization] = false
-    prefs[:starter_app] = false
-    prefs[:form_builder] = 'simple_form'
-    prefs[:quiet_assets] = true
-    prefs[:local_env_file] = 'none'
-    prefs[:better_errors] = true
-    prefs[:pry] = false
-    prefs[:deployment] = 'none'
-    prefs[:ban_spiders] = false
-    prefs[:github] = false
-  when 'rails-bootstrap'
-    prefs[:git] = true
-    prefs[:database] = 'default'
-    prefs[:frontend] = 'bootstrap3'
-    prefs[:email] = 'none'
-    prefs[:authentication] = false
-    prefs[:devise_modules] = false
-    prefs[:authorization] = false
-    prefs[:starter_app] = false
-    prefs[:form_builder] = false
-    prefs[:quiet_assets] = true
-    prefs[:local_env_file] = false
-    prefs[:better_errors] = true
-    prefs[:pry] = false
-    prefs[:deployment] = 'none'
-  when 'rails-foundation'
-    prefs[:git] = true
-    prefs[:database] = 'default'
-    prefs[:frontend] = 'foundation5'
-    prefs[:email] = 'none'
-    prefs[:authentication] = false
-    prefs[:devise_modules] = false
-    prefs[:authorization] = false
-    prefs[:starter_app] = false
-    prefs[:form_builder] = false
-    prefs[:quiet_assets] = true
-    prefs[:local_env_file] = false
-    prefs[:better_errors] = true
-    prefs[:pry] = false
-    prefs[:deployment] = 'none'
-  when 'rails-devise'
-    prefs[:git] = true
-    prefs[:authentication] = 'devise'
-    prefs[:authorization] = false
-    prefs[:starter_app] = false
-    prefs[:quiet_assets] = true
-    prefs[:local_env_file] = false
-    prefs[:better_errors] = true
-    prefs[:pry] = false
-    prefs[:deployment] = 'none'
-  when 'rails-devise-pundit'
-    prefs[:git] = true
-    prefs[:authentication] = 'devise'
-    prefs[:authorization] = 'pundit'
-    prefs[:starter_app] = false
-    prefs[:quiet_assets] = true
-    prefs[:local_env_file] = false
-    prefs[:better_errors] = true
-    prefs[:pry] = false
-    prefs[:deployment] = 'none'
-  when 'rails-omniauth'
-    prefs[:git] = true
-    prefs[:email] = 'none'
-    prefs[:authentication] = 'omniauth'
-    prefs[:authorization] = 'none'
-    prefs[:starter_app] = false
-    prefs[:quiet_assets] = true
-    prefs[:local_env_file] = false
-    prefs[:better_errors] = true
-    prefs[:pry] = false
-    prefs[:deployment] = 'none'
-end
-
 case prefs[:railsapps]
   when 'saas'
     prefs[:railsapps] = prefs[:billing] || (multiple_choice "Billing with Stripe or Recurly?",
